--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+### C ### 
+# Don't push the Libraries
+Libraries/*
+
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/c
 # Edit at https://www.toptal.com/developers/gitignore?templates=c
 
-### C ###
 # Prerequisites
 *.d
 
